force-app/main/default/objects/Task_Mapping__c/Task_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>scaleMatters Task Mapping</label>
</CustomObject>