force-app/main/default/objects/Task_Mapping__c/fields/Call_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Call_Mapping__c</fullName>
    <label>Call Mapping</label>
    <type>TextArea</type>
</CustomField>