force-app/main/default/objects/Task_Mapping__c/fields/Email_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Email_Mapping__c</fullName>
    <label>Email Mapping</label>
    <type>TextArea</type>
</CustomField>