force-app/main/default/objects/Task_Mapping__c/fields/LinkedIn_Mapping__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Mapping__c</fullName>
    <label>LinkedIn Mapping</label>
    <type>TextArea</type>
</CustomField>